fix: добавление описания ошибок в сваггер добавление и исправление логирования ссылки на внешние апи перенесены в конфиг исправление бд и некоторой логики
